resources/k8s/deployment/deployment.yaml
# Copyright © 2021 Atomist, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: nodejs-service
    app.kubernetes.io/part-of: nodejs-service
  name: nodejs-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nodejs-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nodejs-service
        app.kubernetes.io/part-of: nodejs-service
    spec:
      containers:
        - image: gcr.io/personalsdm-216019/nodejs-server
          name: controller
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
          securityContext:
            runAsNonRoot: false
            readOnlyRootFilesystem: true
